deployment/heidi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file deploy.yaml convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: heidi
  name: heidi
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: heidi
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file deploy.yaml convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: heidi
    spec:
      containers:
        - args:
            - bin/heidi
            - start
          image: gcr.io/quirkshop-1585189206879/heidi:v0.44
          imagePullPolicy: Always
          name: heidi
          ports:
            - containerPort: 4000
          resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
