deployment/janus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file deploy.yaml convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: janus
  name: janus
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: janus
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file deploy.yaml convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: janus
    spec:
      containers:
        - args:
            - /opt/janus/bin/janus
            - -S
            - stun.l.google.com:19302
          image: gcr.io/quirkshop-1585189206879/janus:v0.46
          imagePullPolicy: Always
          name: janus
          ports:
            - containerPort: 8088
            - containerPort: 8188
            - containerPort: 8989
          resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
