deployment/janus-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file deploy.yaml convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: janus
  name: janus
  namespace: ingress-nginx
spec:
  ports:
  - name: "8088"
    port: 8088
    targetPort: 8088
  - name: "8188"
    port: 8188
    targetPort: 8188
  - name: "8989"
    port: 8989
    targetPort: 8989
  selector:
    io.kompose.service: janus
status:
  loadBalancer: {}
